# OpenEnV

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_local.sh
graders/: grader.py
scripts/: validate-submission.sh
server/: app.py  environment.py  models.py
static/: index.html
tasks/: definitions.py
tests/: test_api.py  test_environment.py
