[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-code-review"
version = "1.0.0"
description = "OpenEnv-compliant environment for AI code review tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "openenv-code-review" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "python-multipart==0.0.9",
  "openai>=2.7.2",
  "requests==2.32.3",
  "pytest==8.2.2",
  "httpx==0.27.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
